skills alignment issues +b achelor diploma rename

--- a/Scss/main/Partials/mainContainer/mainContainer.scss
+++ b/Scss/main/Partials/mainContainer/mainContainer.scss
@@ -301,7 +301,7 @@ body::-webkit-scrollbar {
                         }
                     }
                     .content {
-                        margin-top: 15vh;
+                        margin-top: 10vw;
                         display: none;
                         padding: 0px;
                         position: fixed;
