--- a/Scss/personalWebsitStyles.css
+++ b/Scss/personalWebsitStyles.css
@@ -869,7 +869,7 @@ body::-webkit-scrollbar {
     width: 60vw;
   }
   .container #skillsSection ul li .content {
-    margin-top: 15vh;
+    margin-top: 10vw;
     display: none;
     padding: 0px;
     position: fixed;
